// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngagementRate when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_engagement_rate"
  >
    Percent of Engaged Sessions
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    >
      56.7%
    </div>
  </div>
</DocumentFragment>
`;

exports[`EngagementRate when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_engagement_rate"
  >
    Percent of Engaged Sessions
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    />
  </div>
</DocumentFragment>
`;

exports[`EngagementRate when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_engagement_rate"
  >
    Percent of Engaged Sessions
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    />
  </div>
</DocumentFragment>
`;
